tests/tooling/fixtures/native/recovery/positive/instancetype_protocol_qualifier_alias_signature.objc3
module InstancetypeProtocolQualifierAliasSignature;

fn choose(flag: bool, when_true: instancetype<NSObject>, when_false: instancetype<NSObject>) -> instancetype {
  if (flag) {
    return when_true;
  }
  return when_false;
}

fn main() -> i32 {
  return choose(true, 40, 2) + 1;
}
