tests/tooling/fixtures/native/recovery/negative/negative_nested_block_parser_missing_rbrace.objc3
// Expected diagnostic code(s): O3P111.
module NegativeNestedBlockParserMissingRbrace;

fn main() -> i32 {
  {
    let x = 1;
  }
  {
    let y = 2;
  return y;
}
